#WEB - implementação cards na página home.
