# thf-sample-web-conference/src/app/model/models.ts
@@ -4,6 +4,7 @@ export * from './lecture';
 export * from './lectureSummary';
 export * from './note';
 export * from './noteSummary';
+export * from './objectLength';
 export * from './speaker';
 export * from './track';
 export * from './tracksResponse';
