# thf-sample-web-conference/src/app/model/objectLength.ts
@@ -1,0 +1,6 @@
+export interface ObjectLength {
+    /**
+     * Length
+     */
+    length: number;
+}
